# game_news

./: .gitignore  GAME_NEWS_CHANNEL_DESIGN.md  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
config/: README.md  app.json  sources.json
game_news_bot/: __init__.py  __main__.py  bulletin.py  cli.py  community.py  config.py  db.py  digest.py  models.py  publish.py  site.py  storage.py  utils.py
game_news_bot/ai/: __init__.py  client.py
game_news_bot/collectors/: rss.py
game_news_bot/pipelines/: process.py
